[package]
name = "rust_hydro"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
npy = "0.4.0"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
